# video_capture_h264

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
notebooks/: Geospatial_Machine_Learning.ipynb
